feat: add phase 2 substance inference
